# pyjsonexceller

./: .gitignore  LICENSE  README.md  pyproject.toml
pyjsonexceller/: __init__.py  exceptions.py  transform.py
tests/: test_transform.py
